# fstimer24h

./: .gitignore  .project  .pydevproject  README.md  fstimer.py  pyproject.toml  requirements.txt
fstimer/: messages.pot  timer.py
fstimer/gui/: about.py  editt0.py  edittime.py  importprereg.py  intro.py  preregister.py  pretime.py  printfields.py  register.py  root.py  timing.py  util_classes.py
fstimer/locales/: base.pot
fstimer/locales/de/LC_MESSAGES/: base.mo  base.po
fstimer/printer/: formatter.py  printexcel.py
